--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@heroicons/react": "^2.1.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.34.0",
+    "cookie": "^0.6.0",
+    "jose": "^5.2.4",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.34.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
