--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@sanity/vision": "^3.34.0",
     "cookie": "^0.6.0",
     "jose": "^5.2.4",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.2",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "next-sanity": "^7.1.4",
