--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "heroicons": "^2.1.3",
     "jose": "^5.2.4",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
