--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie": "^0.6.0",
     "heroicons": "^2.1.3",
     "jose": "^5.2.4",
+    "mobx-react": "^9.1.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "next": "14.1.3",
