--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.34.0",
     "@types/bcrypt": "^5.0.2",
@@ -20,11 +21,12 @@
     "heroicons": "^2.1.3",
     "jose": "^5.2.4",
     "mobx-react": "^9.1.1",
-    "mongodb": "^6.5.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.3.2",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "next-sanity": "^7.1.4",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.34.0",
