--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.1",
+    "@mui/x-date-pickers": "^7.12.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.34.0",
@@ -18,10 +21,12 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "heroicons": "^2.1.3",
     "jose": "^5.2.4",
     "mobx-react": "^9.1.1",
-    "mongodb": "^6.8.0",
+    "mongodb": "^5.0",
     "mongoose": "^8.3.2",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
@@ -30,7 +35,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.34.0",
-    "styled-components": "^6.1.8",
+    "styled-components": "^6.1.12",
     "zod": "^3.22.5"
   },
   "devDependencies": {
