--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.34.0",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.2.0",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -35,6 +37,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.34.0",
+    "stripe": "^16.7.0",
     "styled-components": "^6.1.12",
     "zod": "^3.22.5"
   },
