Added nav bar sections and implemented marquee component

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-loading-spin": "^2.1.9",
     "sanity": "^3.34.0",
     "stripe": "^16.7.0",
