--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.1",
     "@mui/x-date-pickers": "^7.12.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@react-email/components": "^0.0.25",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.34.0",
     "@stripe/react-stripe-js": "^2.7.3",
@@ -36,8 +37,10 @@
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^3.0.1",
     "react-fast-marquee": "^1.6.5",
     "react-loading-spin": "^2.1.9",
+    "resend": "^4.0.0",
     "sanity": "^3.34.0",
     "stripe": "^16.7.0",
     "styled-components": "^6.1.12",
