--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-loading-spin": "^2.1.9",
     "resend": "^4.0.0",
     "sanity": "^3.34.0",
+    "sharp": "^0.33.5",
     "stripe": "^16.7.0",
     "styled-components": "^6.1.12",
     "zod": "^3.22.5"
