--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sharp": "^0.33.5",
     "stripe": "^16.7.0",
     "styled-components": "^6.1.12",
+    "swiper": "^8.3.2",
     "zod": "^3.22.5"
   },
   "devDependencies": {
