--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "stripe": "^16.7.0",
     "styled-components": "^6.1.12",
     "swiper": "^8.3.2",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.22.5"
   },
   "devDependencies": {
