--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/x-date-pickers": "^7.12.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@react-email/components": "^0.0.25",
